Tue Jan  9 20:40:59 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:

          Fixed a problem that the *TypeSupportImpl::get_type_name () 
          always returns the default type name (interface repository id).
          It should returns the name actually registered either from
          the user (via register_type) or the default type name 
          (interface repository id).
          
Tue Jan  9 15:29:59 UTC 2007  Ciju John  <johnc@ociweb.com>

        * PROBLEM-REPORT-FORM:
	  Adding a DDS specific PROBLEM-REPORT-FORM.

Mon Jan  8 21:09:41 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds\DCPS\transport\framework\TransportSendStrategy.cpp:

          Fixed the recursively acquiring non-recursive lock problem
          in remove_all_control_msgs (). To fix it, move the lock
          from remove_sample_i() to the caller functions.

Mon Jan  8 18:37:48 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds\DCPS\transport\simpleTCP\SimpleTcpDataLink.cpp:
        * dds\DCPS\transport\framework\TransportSendStrategy.inl:

          Made the terminate_send() called before send graceful
          disconnect message in
          SimpleTcpDataLink::send_graceful_disconnect_message() and
          made TransportSendStrategy::suspend_send() not reset the
          suspend state when it's already in terminate state. This
          should fix some race condition when terminate_send() is
          called before sending disconnect message.

Mon Jan  8 17:46:53 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * DDS_release_notes.txt:

          Added most changes made after 0.9 to release notes.

Fri Jan  5 22:06:24 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        This fixed the problem that default transport id does not work.
        [See RT8497].

        * dds\DCPS\transport\simpleUDP\SimpleUdpLoader.cpp:
        * dds\DCPS\transport\framework\TransportFactory.h: